<resources>
    <string name="app_name">QuikUninstall</string>
    <string name="action_settings">Settings</string>

    <string name="action_share_app">Share App</string>
    <string name="action_rate">Rate App</string>
    <string name="action_select_all">Select All</string>
    <string name="action_unselect_all">Un-select All</string>

    <string name="title_search">Search</string>
    <string name="title_sort">Sort By</string>

    <string name="hint_search">Search for an App</string>

    <string name="share_text">Check out this great uninstaller app!</string>

    <string name="share_chooser">Share this app with a friend</string>

    <string name="sort_name">Sort By Name</string>
    <string name="sort_date">Sort By Install Date</string>
    <string name="sort_size">Sort By File Size</string>

    <string name="toast_uninstall">Select some apps to uninstall first</string>

    <string name="title_finished">All Done</string>
    <string name="subtitle_finished">Finished Uninstalling Apps</string>

    <string name="button_return">Return</string>

    <string name="title_activity_finish">Finished</string>
</resources>
