<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="yourname.quickuninstall.MainActivity">

    <item android:id="@+id/search"
        android:icon="@drawable/icon_search"
        android:title="@string/title_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item android:id="@+id/action_sort"
        android:icon="@drawable/icon_sort"
        android:title="@string/title_sort"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_rate"
        android:orderInCategory="100"
        android:title="@string/action_rate"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="200"
        android:title="@string/action_share_app"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_select_all"
        android:title="@string/action_select_all"
        android:orderInCategory="300"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_unselect_all"
        android:title="@string/action_unselect_all"
        android:orderInCategory="400"
        app:showAsAction="never" />

</menu>
